--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gaming-monk",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nitingupta220.github.io/gaming-monk",
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
@@ -17,7 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build" 
   },
   "eslintConfig": {
     "extends": "react-app"
